# bcc

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/text/: behavior_labels.csv  stance_labels.csv
data/text/raw/: Batch_5298950_batch_results.csv  Batch_5298954_batch_results.csv  preprocess.ipynb
src/ensemble/: classifier_pipeline.py  featurize_text.py
src/inference/: generate_requests.py
src/slurm/: make_requests.sh  run_analytics.sh  run_clf_ensemble.sh  run_full_pipeline.sh  run_llm_inference.sh  run_requests.sh
